[package]
name = "smoltcp_c"
version = "0.1.0"
description = "A primitive C API wrapper for smoltcp"
authors = ["TÖRÖK Attila <torokati44@gmail.com>"]

[lib]
name = "smoltcp_c"
crate-type = ["lib", "staticlib"]

[dependencies]
log = "0.3.6"
env_logger = "0.4.0"

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp.git"
default_features = false
features = ["use_std", "use_collections", "use_log", "verbose"]
